--- a/Quiz-Multi-Answers-App/View/Base.lproj/Main.storyboard
+++ b/Quiz-Multi-Answers-App/View/Base.lproj/Main.storyboard
@@ -24,8 +24,14 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gm4-rY-237">
                                 <rect key="frame" x="20" y="44" width="374" height="818"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvT-8O-dgz">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="617"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQm-mc-HVo">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="26.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text="Question Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvT-8O-dgz">
+                                        <rect key="frame" x="0.0" y="36.5" width="374" height="580.5"/>
                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -84,6 +90,7 @@
                         <outlet property="falseButton" destination="ZGG-Ve-vRu" id="Y2P-1G-vzU"/>
                         <outlet property="progressBar" destination="Dbv-Af-qPB" id="vMC-Zh-M18"/>
                         <outlet property="questionLabel" destination="vvT-8O-dgz" id="j61-Mq-hhw"/>
+                        <outlet property="scoreLabel" destination="mQm-mc-HVo" id="alK-zM-sR1"/>
                         <outlet property="trueButton" destination="Zsv-F4-E2L" id="BVU-uF-JUQ"/>
                     </connections>
                 </viewController>
